<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_functions_black_menu_drawer_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_people_outline_black_menu_drawer_24dp"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_add_alert_black_menu_drawer_24dp"
            android:title="@string/menu_send_request" />
    </group>

</menu>
