<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.nav_send_request.RequestFragment"
    android:paddingStart="60dp"
    android:paddingEnd="60dp"
    android:theme="@style/AppThemeMaterial">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="🤔"
                android:textColor="@color/secondaryColor"
                android:textSize="90sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_request_greeting"
                android:textColor="@color/secondaryColor"
                android:textSize="23sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/send_request_email_form_explanation"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:endIconMode="clear_text"
                app:helperText="@string/send_request_email_form_hint"
                app:helperTextTextAppearance="@style/HelperTextAppearance" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/broad_answer_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/send_request_broad_input_hint"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:endIconMode="clear_text"
                app:helperText="@string/send_request_broad_greeting_explanation"
                app:helperTextTextAppearance="@style/HelperTextAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/choosing_answer_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/send_request_choosing_answers_hint"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:helperText="@string/send_request_choosing_answers_explanation"
                app:helperTextTextAppearance="@style/HelperTextAppearance">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/send_repair_request_button"
                style="@style/FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                app:backgroundTint="@color/secondaryColor"
                app:icon="@drawable/ic_send_black_48dp"
                app:iconTint="@color/primaryColor"
                app:iconPadding="5dp"
                app:iconGravity="end"
                app:maxImageSize="48dp"
                app:strokeColor="@color/secondaryColor"
                android:text="@string/send_request_action_button_text"
                android:textColor="@color/primaryColor"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>