<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/guide_content_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSolutionColor">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/guide_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        android:outlineProvider="none"
        android:translationZ="0dp"
        android:background="@android:color/transparent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/guide_toolbar_constant"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:titleTextAppearance="@style/TitleAppearanceMenu"
            app:menu="@menu/guide_toolbar_options" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/guide_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/guide_tab_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:tabSelectedTextColor="@null"
        app:tabRippleColor="@null"
        app:tabBackground="@drawable/guide_point_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:theme="@style/Theme.MaterialComponents"
        android:elevation="0dp"
        android:id="@+id/guide_pager_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/guide_tab_overview"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textAllCaps="false"
        app:cornerRadius="4dp"
        app:iconPadding="2dp"
        app:iconGravity="end"
        app:icon="@drawable/ic_guide_action_12dp"
        app:iconTint="@color/primaryLightColor"
        app:backgroundTint="@color/secondaryColor"
        android:text="Далее"
        tools:text="Далее" />

    <TextView
        android:id="@+id/guide_item_text"
        android:layout_above="@id/guide_pager_action"
        android:elevation="1dp"
        android:alpha="1"
        android:layout_marginBottom="20dp"
        android:text="@string/guide_instruction_config_of_keyboard"
        android:textSize="15sp"
        android:maxEms="15"
        style="@style/TextAppearance.Guide" />


    <LinearLayout
        android:id="@+id/guide_view_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:alpha="0"
        tools:alpha="0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/untitled_to_page"
            android:contentDescription="logic. logo"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Guide"
            android:text="@string/guide_instruction_the_greeting_words"
            android:textSize="27sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/guide_view_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/primaryColor"
        android:textSize="50sp"
        android:maxEms="15"
        android:alpha="0"
        android:text="@string/guide_view_explanation"
        tools:alpha="1" />

</RelativeLayout>
